German/Lenguajes y compiladores/Lab3/tests/bad/bad05.imp
data N = O | S <N>

method suma (n : N, m : N) returns (r : N)
{
    -- wrong number of arguments
    r := O [n]
} 

